--- a/css/style.css
+++ b/css/style.css
@@ -708,6 +708,10 @@ video {
   z-index: -10;
 }
 
+.order-2 {
+  order: 2;
+}
+
 .m-5 {
   margin: 1.25rem;
 }
@@ -777,6 +781,10 @@ video {
 
 .ml-\[0\.28rem\] {
   margin-left: 0.28rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
 }
 
 .block {
@@ -873,6 +881,42 @@ video {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-\[3\.5rem\] {
+  width: 3.5rem;
+}
+
+.w-\[3\.8rem\] {
+  width: 3.8rem;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-\[85vw\] {
+  width: 85vw;
 }
 
 .max-w-sm {
@@ -1009,6 +1053,18 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
 }
 
 .overflow-x-hidden {
@@ -1665,12 +1721,36 @@ video {
 }
 
 @media (min-width: 454px) {
+  .xmd\:order-2 {
+    order: 2;
+  }
+
+  .xmd\:order-3 {
+    order: 3;
+  }
+
+  .xmd\:order-1 {
+    order: 1;
+  }
+
   .xmd\:block {
     display: block;
   }
 
+  .xmd\:flex {
+    display: flex;
+  }
+
   .xmd\:h-\[375px\] {
     height: 375px;
+  }
+
+  .xmd\:flex-row {
+    flex-direction: row;
+  }
+
+  .xmd\:justify-between {
+    justify-content: space-between;
   }
 
   .xmd\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -1679,9 +1759,44 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
+  .xmd\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0px * var(--tw-space-x-reverse));
+    margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .xmd\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .xmd\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .xmd\:space-x-32 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(8rem * var(--tw-space-x-reverse));
+    margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .xmd\:space-y-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+  }
+
   .xmd\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .xmd\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .xmd\:pb-4 {
@@ -1699,6 +1814,30 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:justify-between {
+    justify-content: space-between;
+  }
+
+  .sm\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
