--- a/css/style.css
+++ b/css/style.css
@@ -700,6 +700,30 @@ video {
   left: 1100%;
 }
 
+.top-12 {
+  top: 3rem;
+}
+
+.left-12 {
+  left: 3rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -777,6 +801,10 @@ video {
 
 .ml-\[0\.28rem\] {
   margin-left: 0.28rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .block {
