made names bigger on show quote modal

--- a/css/style.css
+++ b/css/style.css
@@ -1821,6 +1821,16 @@ video {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .xs\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xs\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 454px) {
@@ -1884,6 +1894,16 @@ video {
 
   .sm\:font-serif {
     font-family: Poppins, sans-serif;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
