--- a/css/style.css
+++ b/css/style.css
@@ -952,6 +952,18 @@ video {
   width: 6rem;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-\[7rem\] {
+  width: 7rem;
+}
+
 .max-w-sm {
   max-width: 24rem;
 }
@@ -1194,6 +1206,10 @@ video {
   border-left-width: 4px;
 }
 
+.border-t-0 {
+  border-top-width: 0px;
+}
+
 .border-none {
   border-style: none;
 }
@@ -1429,6 +1445,14 @@ video {
 
 .pt-1 {
   padding-top: 0.25rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .text-center {
