--- a/css/style.css
+++ b/css/style.css
@@ -1790,6 +1790,14 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.dark .dark\:border-2 {
+  border-width: 2px;
+}
+
+.dark .dark\:border-t-0 {
+  border-top-width: 0px;
+}
+
 .dark .dark\:border-none {
   border-style: none;
 }
