--- a/css/style.css
+++ b/css/style.css
@@ -1466,6 +1466,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-emerald-600 {
   outline-color: #059669;
 }
@@ -1509,6 +1515,57 @@ video {
 }
 
 /* Sidebar */
+
+.show-sidebar {
+  --tw-translate-x: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.dark .show-sidebar {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+@media (min-width: 768px) {
+  .show-sidebar .sidebar-wrap {
+    align-items: flex-end;
+    padding-right: 0.5rem;
+  }
+
+  .show-sidebar .menu-text {
+    display: inline-block;
+  }
+
+  .show-sidebar .settings-wrapper {
+    align-items: flex-end;
+  }
+
+  .show-sidebar .settings {
+    width: 119px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+    padding: 0.5rem;
+  }
+
+  .show-sidebar .settings-text {
+    display: inline-block;
+  }
+
+  .show-sidebar .save {
+    width: 119px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+    padding: 0.5rem;
+  }
+
+  .show-sidebar .save-text {
+    display: inline-block;
+  }
+}
 
 .settings-button:hover .settings-icon {
   --tw-rotate: 360deg;
@@ -1770,6 +1827,11 @@ video {
 
 .dark .dark\:outline-white {
   outline-color: #fff;
+}
+
+.dark .dark\:hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .dark .dark\:hover\:bg-neutral-700:hover {
