--- a/css/style.css
+++ b/css/style.css
@@ -734,14 +734,14 @@ video {
   margin-right: 0.5rem;
 }
 
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mt-1 {
@@ -840,6 +840,10 @@ video {
   height: 260px;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-24 {
   height: 6rem;
 }
@@ -848,20 +852,8 @@ video {
   height: 3rem;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-7 {
-  height: 1.75rem;
+.h-5 {
+  height: 1.25rem;
 }
 
 .max-h-full {
@@ -908,12 +900,24 @@ video {
   width: 80vw;
 }
 
+.w-\[90vw\] {
+  width: 90vw;
+}
+
 .w-\[90px\] {
   width: 90px;
 }
 
 .w-4\/5 {
   width: 80%;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-14 {
@@ -928,20 +932,8 @@ video {
   width: 6rem;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-\[90vw\] {
-  width: 90vw;
+.w-5 {
+  width: 1.25rem;
 }
 
 .max-w-sm {
@@ -1058,20 +1050,16 @@ video {
   justify-content: space-between;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-1 {
   gap: 0.25rem;
 }
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1108,6 +1096,10 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-x-hidden {
@@ -1278,6 +1270,16 @@ video {
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f8f3f9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 243 249 / var(--tw-bg-opacity));
@@ -1304,11 +1306,6 @@ video {
 
 .to-neutral-800 {
   --tw-gradient-to: #262626;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-2 {
@@ -1457,12 +1454,20 @@ video {
   text-transform: capitalize;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .tracking-widest {
   letter-spacing: 0.1em;
 }
 
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-white {
@@ -1610,6 +1615,17 @@ video {
   .show-sidebar .save-text {
     display: inline-block;
   }
+
+  .show-sidebar .analytics {
+    width: 119px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+    padding: 0.5rem;
+  }
+
+  .show-sidebar .analytics-text {
+    display: inline-block;
+  }
 }
 
 .settings-button:hover .settings-icon {
@@ -1653,6 +1669,30 @@ video {
 }
 
 .save-button:hover .save-text {
+  --tw-text-opacity: 1;
+  color: rgb(4 120 87 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+}
+
+.analytics-button:hover .analytics-icon {
+  --tw-rotate: 360deg;
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .analytics-button:hover .analytics-icon {
+    --tw-text-opacity: 1;
+    color: rgb(5 150 105 / var(--tw-text-opacity));
+  }
+}
+
+.analytics:hover .analytics-text {
   --tw-text-opacity: 1;
   color: rgb(4 120 87 / var(--tw-text-opacity));
   transition-property: all;
@@ -1896,15 +1936,6 @@ video {
   .xss\:h-\[190px\] {
     height: 190px;
   }
-
-  .xss\:w-\[80vw\] {
-    width: 80vw;
-  }
-
-  .xss\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
 }
 
 @media (min-width: 368px) {
@@ -1912,29 +1943,12 @@ video {
     height: 178px;
   }
 
-  .xs\:h-7 {
-    height: 1.75rem;
-  }
-
-  .xs\:w-3\/4 {
-    width: 75%;
-  }
-
   .xs\:w-\[80vw\] {
     width: 80vw;
   }
 
-  .xs\:w-7 {
-    width: 1.75rem;
-  }
-
-  .xs\:gap-4 {
-    gap: 1rem;
-  }
-
-  .xs\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .xs\:w-3\/4 {
+    width: 75%;
   }
 
   .xs\:text-base {
@@ -2002,28 +2016,16 @@ video {
     height: 270px;
   }
 
-  .sm\:h-7 {
-    height: 1.75rem;
-  }
-
-  .sm\:w-\[80vw\] {
-    width: 80vw;
-  }
-
-  .sm\:w-7 {
-    width: 1.75rem;
-  }
-
   .sm\:max-w-2xl {
     max-width: 42rem;
   }
 
-  .sm\:gap-4 {
-    gap: 1rem;
-  }
-
   .sm\:gap-2 {
     gap: 0.5rem;
+  }
+
+  .sm\:gap-4 {
+    gap: 1rem;
   }
 
   .sm\:border-4 {
@@ -2072,12 +2074,16 @@ video {
     display: flex;
   }
 
+  .md\:h-7 {
+    height: 1.75rem;
+  }
+
   .md\:h-\[188px\] {
     height: 188px;
   }
 
-  .md\:h-7 {
-    height: 1.75rem;
+  .md\:w-7 {
+    width: 1.75rem;
   }
 
   .md\:w-36 {
@@ -2086,10 +2092,6 @@ video {
 
   .md\:w-full {
     width: 100%;
-  }
-
-  .md\:w-7 {
-    width: 1.75rem;
   }
 
   .md\:max-w-5xl {
