added search functionality to saved quotes

--- a/css/style.css
+++ b/css/style.css
@@ -948,6 +948,18 @@ video {
   width: 1.25rem;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-\[140px\] {
+  width: 140px;
+}
+
+.w-\[130px\] {
+  width: 130px;
+}
+
 .max-w-sm {
   max-width: 24rem;
 }
