--- a/css/style.css
+++ b/css/style.css
@@ -804,6 +804,10 @@ video {
   margin-left: 0.28rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .block {
   display: block;
 }
@@ -854,6 +858,10 @@ video {
 
 .h-12 {
   height: 3rem;
+}
+
+.h-7 {
+  height: 1.75rem;
 }
 
 .max-h-full {
