--- a/css/style.css
+++ b/css/style.css
@@ -812,6 +812,10 @@ video {
   display: inline-block;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
@@ -946,6 +950,14 @@ video {
 
 .max-w-5xl {
   max-width: 64rem;
+}
+
+.max-w-\[185px\] {
+  max-width: 185px;
+}
+
+.max-w-\[100px\] {
+  max-width: 100px;
 }
 
 .-translate-x-1\/2 {
@@ -1112,6 +1124,10 @@ video {
 
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded-xl {
@@ -1539,6 +1555,11 @@ video {
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1567,6 +1588,10 @@ video {
 
 .outline-emerald-700 {
   outline-color: #047857;
+}
+
+.outline-blue-600 {
+  outline-color: #2563eb;
 }
 
 .backdrop-blur-sm {
@@ -2122,6 +2147,10 @@ video {
     margin-left: 0px;
   }
 
+  .md\:mr-6 {
+    margin-right: 1.5rem;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -2148,6 +2177,10 @@ video {
 
   .md\:max-w-5xl {
     max-width: 64rem;
+  }
+
+  .md\:max-w-\[100px\] {
+    max-width: 100px;
   }
 
   .md\:flex-wrap {
