--- a/css/style.css
+++ b/css/style.css
@@ -972,36 +972,12 @@ video {
   max-width: 28rem;
 }
 
-.max-w-5xl {
-  max-width: 64rem;
-}
-
-.max-w-\[75\%\] {
-  max-width: 75%;
-}
-
-.max-w-\[90\%\] {
-  max-width: 90%;
-}
-
-.max-w-\[95\%\] {
-  max-width: 95%;
-}
-
-.max-w-\[98\%\] {
-  max-width: 98%;
-}
-
 .max-w-full {
   max-width: 100%;
 }
 
-.max-w-\[110\%\] {
-  max-width: 110%;
-}
-
-.max-w-\[105\%\] {
-  max-width: 105%;
+.max-w-5xl {
+  max-width: 64rem;
 }
 
 .-translate-x-1\/2 {
@@ -1194,20 +1170,20 @@ video {
   border-bottom-right-radius: 1rem;
 }
 
-.rounded-tr-none {
-  border-top-right-radius: 0px;
-}
-
-.rounded-br-none {
-  border-bottom-right-radius: 0px;
-}
-
 .rounded-tl-xl {
   border-top-left-radius: 0.75rem;
 }
 
 .rounded-bl-xl {
   border-bottom-left-radius: 0.75rem;
+}
+
+.rounded-tr-none {
+  border-top-right-radius: 0px;
+}
+
+.rounded-br-none {
+  border-bottom-right-radius: 0px;
 }
 
 .border-2 {
@@ -1683,7 +1659,7 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .show-sidebar .sidebar-wrap {
     align-items: flex-end;
     padding-right: 0.5rem;
@@ -1740,7 +1716,7 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .settings-button:hover .settings-icon {
     --tw-text-opacity: 1;
     color: rgb(5 150 105 / var(--tw-text-opacity));
@@ -1764,7 +1740,7 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .save-button:hover .save-icon {
     --tw-text-opacity: 1;
     color: rgb(5 150 105 / var(--tw-text-opacity));
@@ -1788,7 +1764,7 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .analytics-button:hover .analytics-icon {
     --tw-text-opacity: 1;
     color: rgb(5 150 105 / var(--tw-text-opacity));
@@ -2189,16 +2165,16 @@ video {
     width: 1.75rem;
   }
 
-  .md\:w-36 {
-    width: 9rem;
-  }
-
   .md\:w-full {
     width: 100%;
   }
 
   .md\:max-w-\[100px\] {
     max-width: 100px;
+  }
+
+  .md\:max-w-xl {
+    max-width: 36rem;
   }
 
   .md\:max-w-5xl {
@@ -2211,10 +2187,6 @@ video {
 
   .md\:items-center {
     align-items: center;
-  }
-
-  .md\:justify-end {
-    justify-content: flex-end;
   }
 
   .md\:justify-center {
@@ -2245,10 +2217,6 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.25rem * var(--tw-space-x-reverse));
     margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:pr-1 {
-    padding-right: 0.25rem;
   }
 
   .md\:hover\:border-emerald-700:hover {
@@ -2296,5 +2264,28 @@ video {
 @media (min-width: 1024px) {
   .lg\:max-h-\[95vh\] {
     max-height: 95vh;
+  }
+
+  .lg\:w-36 {
+    width: 9rem;
+  }
+
+  .lg\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .lg\:pr-1 {
+    padding-right: 0.25rem;
+  }
+
+  .lg\:hover\:border-emerald-700:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(4 120 87 / var(--tw-border-opacity));
+  }
+
+  .lg\:hover\:shadow-lg:hover {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
