added proper css and javascript after tailwind css tried to fuck me

--- a/css/input.css
+++ b/css/input.css
@@ -66,3 +66,17 @@
 .analytics:hover .analytics-text {
   @apply text-emerald-700 transition-all duration-200;
 }
+
+/* Classes For Javascript */
+.grid-class {
+  @apply grid;
+  @apply text-emerald-600;
+}
+
+.name-sizes {
+  @apply text-base xs:text-lg sm:text-xl md:text-2xl;
+}
+
+.emerald-color {
+  @apply text-emerald-600;
+}
