--- a/css/style.css
+++ b/css/style.css
@@ -848,10 +848,6 @@ video {
   display: inline-flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
 }
@@ -1098,10 +1094,6 @@ video {
   gap: 1.5rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1130,6 +1122,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1140,12 +1138,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -1597,11 +1589,6 @@ video {
   color: rgb(38 38 38 / var(--tw-text-opacity));
 }
 
-.text-emerald-600 {
-  --tw-text-opacity: 1;
-  color: rgb(5 150 105 / var(--tw-text-opacity));
-}
-
 .opacity-0 {
   opacity: 0;
 }
@@ -1800,6 +1787,45 @@ video {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 200ms;
+}
+
+/* Classes For Javascript */
+
+.grid-class {
+  display: grid;
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity));
+}
+
+.name-sizes {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+@media (min-width: 368px) {
+  .name-sizes {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .name-sizes {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .name-sizes {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+.emerald-color {
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity));
 }
 
 .placeholder\:tracking-wide::-moz-placeholder {
@@ -2172,6 +2198,10 @@ video {
     margin-right: 1.5rem;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:ml-0 {
     margin-left: 0px;
   }
@@ -2188,10 +2218,6 @@ video {
     height: 188px;
   }
 
-  .md\:max-h-\[95vh\] {
-    max-height: 95vh;
-  }
-
   .md\:w-7 {
     width: 1.75rem;
   }
@@ -2204,20 +2230,12 @@ video {
     max-width: 100px;
   }
 
-  .md\:max-w-xl {
-    max-width: 36rem;
+  .md\:max-w-4xl {
+    max-width: 56rem;
   }
 
   .md\:max-w-5xl {
     max-width: 64rem;
-  }
-
-  .md\:max-w-2xl {
-    max-width: 42rem;
-  }
-
-  .md\:max-w-4xl {
-    max-width: 56rem;
   }
 
   .md\:flex-wrap {
@@ -2258,11 +2276,6 @@ video {
     margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .md\:hover\:text-emerald-600:hover {
     --tw-text-opacity: 1;
     color: rgb(5 150 105 / var(--tw-text-opacity));
@@ -2291,10 +2304,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:max-h-\[95vh\] {
-    max-height: 95vh;
-  }
-
   .lg\:w-36 {
     width: 9rem;
   }
