added in icon changing functionality

--- a/css/style.css
+++ b/css/style.css
@@ -960,6 +960,14 @@ video {
   width: 6rem;
 }
 
+.w-\[50vw\] {
+  width: 50vw;
+}
+
+.w-\[70vw\] {
+  width: 70vw;
+}
+
 .max-w-sm {
   max-width: 24rem;
 }
@@ -1587,6 +1595,11 @@ video {
 .text-neutral-800 {
   --tw-text-opacity: 1;
   color: rgb(38 38 38 / var(--tw-text-opacity));
+}
+
+.text-emerald-600 {
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
